--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://fernandoacorreia.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Fernando Correia's Blog
+subtitle: Software engineering and cloud computing.
+author: Fernando Correia
 simple_search: http://google.com/search
 description:
 
@@ -19,7 +19,7 @@ date_format: "ordinal"
 subscribe_rss: /atom.xml
 subscribe_email:
 # RSS feeds can list your email address if you like
-email:
+email: fernandoacorreia@gmail.com
 
 # ----------------------- #
 #    Jekyll & Plugins     #
