--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://fernandoacorreia.github.com
+url: http://www.fernandocorreia.info
 title: Fernando Correia's Blog
 subtitle: Software engineering and cloud computing.
 author: Fernando Correia
@@ -41,7 +41,7 @@ pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
 excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 
-titlecase: true       # Converts page and post titles to titlecase
+titlecase: false       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
@@ -58,13 +58,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: # fernandoacorreia (stuck at "Status updating...")
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: facorreia
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
@@ -73,11 +73,11 @@ twitter_tweet_button: true
 
 # Google +1
 google_plus_one: false
-google_plus_one_size: medium
+google_plus_one_size: small
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
+googleplus_user: # 110695050328670878217 (not using Google+ ATM)
 googleplus_hidden: false
 
 # Pinboard
@@ -89,11 +89,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+disqus_short_name: fernandocorreiasblog
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-33682556-1
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
